--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -5,7 +5,7 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "20",
-      "imageout" : "11000",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -100,7 +100,7 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "30",
-      "imageout" : "11000",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -195,7 +195,7 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "40",
-      "imageout" : "11000",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -290,7 +290,7 @@
       "name" : "猫咪陪伴",
       "type" : 3,
       "consumeTime" : "30",
-      "imageout" : "11003",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -385,7 +385,7 @@
       "name" : "猫咪入住",
       "type" : 2,
       "consumeTime" : "30",
-      "imageout" : "11004",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -480,7 +480,7 @@
       "name" : "猫咪洗脑",
       "type" : 2,
       "consumeTime" : "40",
-      "imageout" : "11005",
+      "imageout" : "Sprites/Main/4 刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
