--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -1373,6 +1373,91 @@
       ],
       "upDesc" : "喵喵喵？",
       "downDesc" : "喵喵喵！"
+    },
+    {
+      "eventId" : "11700",
+      "name" : "突发事件分支测试",
+      "type" : 1,
+      "consumeTime" : "20",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "expireTime" : "0",
+      "outOfTimeRecordId" : "0",
+      "humanId" : "0",
+      "repeatTime" : 1,
+      "emergencyId" : "20001",
+      "isImportant" : 0,
+      "priority" : 200,
+      "preconditions" : [
+        "0",
+        "0",
+        "0"
+      ],
+      "effects" : [
+        "0",
+        "0",
+        "0"
+      ],
+      "result" : [
+        {
+          "eventId" : "311700",
+          "conditions" : [
+            "417000"
+          ]
+        },
+        {
+          "eventId" : "311701",
+          "conditions" : [
+            "0"
+          ]
+        },
+        {
+          "eventId" : "0",
+          "conditions" : [
+            "0"
+          ]
+        }
+      ],
+      "expireEffect" : [
+        "0",
+        "0",
+        "0"
+      ],
+      "generateConditions" : [
+        {
+          "conditions" : [
+            "-1"
+          ]
+        },
+        {
+          "conditions" : [
+            "-1"
+          ]
+        },
+        {
+          "conditions" : [
+            "-1"
+          ]
+        }
+      ],
+      "destroyConditions" : [
+        {
+          "conditions" : [
+            "-1"
+          ]
+        },
+        {
+          "conditions" : [
+            "-1"
+          ]
+        },
+        {
+          "conditions" : [
+            "-1"
+          ]
+        }
+      ],
+      "upDesc" : "喵喵喵？",
+      "downDesc" : "喵喵喵！"
     }
   ]
 }
