为事件添加临时图片配置

--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -6,6 +6,7 @@
       "type" : 1,
       "consumeTime" : "20",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -91,6 +92,7 @@
       "type" : 1,
       "consumeTime" : "30",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -176,6 +178,7 @@
       "type" : 1,
       "consumeTime" : "40",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -261,6 +264,7 @@
       "type" : 3,
       "consumeTime" : "30",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -346,6 +350,7 @@
       "type" : 2,
       "consumeTime" : "30",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -432,6 +437,7 @@
       "type" : 2,
       "consumeTime" : "40",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
@@ -517,8 +523,8 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "20",
-      "imageout" : "11000",
-      "imageIn" : "11000",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -603,8 +609,8 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "30",
-      "imageout" : "11000",
-      "imageIn" : "11000",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -689,8 +695,8 @@
       "name" : "猫咪监视",
       "type" : 1,
       "consumeTime" : "40",
-      "imageout" : "11000",
-      "imageIn" : "11000",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -775,8 +781,8 @@
       "name" : "猫咪陪伴",
       "type" : 3,
       "consumeTime" : "30",
-      "imageout" : "11003",
-      "imageIn" : "11003",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -861,8 +867,8 @@
       "name" : "猫咪入住",
       "type" : 2,
       "consumeTime" : "30",
-      "imageout" : "11004",
-      "imageIn" : "11004",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -948,8 +954,8 @@
       "name" : "猫咪洗脑",
       "type" : 2,
       "consumeTime" : "40",
-      "imageout" : "11005",
-      "imageIn" : "11005",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60001",
@@ -1035,8 +1041,8 @@
       "name" : "flag测试0",
       "type" : 3,
       "consumeTime" : "20",
-      "imageout" : "11610",
-      "imageIn" : "11610",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60000",
@@ -1121,8 +1127,8 @@
       "name" : "flag测试1",
       "type" : 1,
       "consumeTime" : "20",
-      "imageout" : "11610",
-      "imageIn" : "11610",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60000",
@@ -1207,8 +1213,8 @@
       "name" : "flag测试2",
       "type" : 2,
       "consumeTime" : "20",
-      "imageout" : "11610",
-      "imageIn" : "11610",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60000",
@@ -1293,8 +1299,8 @@
       "name" : "flag测试3",
       "type" : 3,
       "consumeTime" : "20",
-      "imageout" : "11610",
-      "imageIn" : "11610",
+      "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "60000",
@@ -1380,6 +1386,7 @@
       "type" : 1,
       "consumeTime" : "20",
       "imageout" : "Sprites/Main/4刺探事件卡片",
+      "imageIn" : "Sprites/Main/4刺探事件卡片",
       "expireTime" : "0",
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
